--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">E Rental</string>
+    <string name="app_name">Rentalku</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="koneksi">Ups! Sepertinya ada yang salah nih. Tap di sini untuk memuat ulang.</string>
